--- a/src/styles/components/_index_hero.scss
+++ b/src/styles/components/_index_hero.scss
@@ -50,18 +50,3 @@
   border: none;
   transition: background 0.2s;
 }
-.hero__btn--primary {
-  background: #1888FF;
-  color: #fff;
-}
-.hero__btn--primary:hover {
-  background: #3FA6FF;
-}
-.hero__btn--secondary {
-  background: #fff;
-  color: #181C25;
-  border: 2px solid #E5EAF1;
-}
-.hero__btn--secondary:hover {
-  background: #F4F7FA;
-}
