--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,12 +1,6 @@
-
 .footer {
   color: #222;
-  padding: 0;
-  font-family: 'Inter', Arial, sans-serif;
-  width: 1440px;
-  min-height: 688px;
-  margin: 20px auto 0 20px;
-  position: relative;
+  gap: 55px;
 }
 
 .footer-main {
@@ -15,7 +9,6 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 64px 0 0 0;
-  max-width: 1400px;
   margin: 0 auto;
   gap: 110px;
 }
@@ -34,8 +27,6 @@
 .footer__desc {
   font-size: 22px;
   color: #222;
-  margin-bottom: 48px;
-  max-width: 400px;
 }
 
 .footer__socials {
@@ -59,7 +50,7 @@
 }
 .footer__social:hover {
   border-color: #0070f3;
-  box-shadow: 0 2px 8px rgba(24,28,37,0.08);
+  box-shadow: 0 2px 8px rgba(24, 28, 37, 0.08);
 }
 
 .footer__links {
@@ -67,7 +58,6 @@
   flex: 2 1 600px;
   justify-content: flex-end;
   gap: 80px;
-  min-width: 600px;
 }
 .footer__col {
   min-width: 160px;
@@ -144,7 +134,6 @@
   margin-top: 48px;
 }
 .footer__bottom-inner {
-  max-width: 1400px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
